<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
   		android:background="#FFFFFF"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp" >

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/time"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView android:id="@+id/tvTimeResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTime"
                android:layout_centerHorizontal="true"
                android:text="2:30 / 4:00"
                android:textSize="15sp" />          
            
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".65" >

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/score"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView android:id="@+id/tvScoreResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvScore"
                android:layout_centerHorizontal="true"
                android:text="25/30"
                android:textSize="15sp" />
            
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:layout_gravity="center_vertical" >

            <TextView
                android:id="@+id/tvLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/level"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView android:id="@+id/tvLevelResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLevel"
                android:layout_centerHorizontal="true"
                android:text="Three"
                android:textSize="15sp" />
            
        </RelativeLayout>
        
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d3d3d3"/>

    <ListView
        android:id="@+id/result_fragment_resultList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5" >
    </ListView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d4d4d4"
        android:orientation="horizontal" 
        android:layout_marginBottom="8dp"
        />
		
    <Button android:id="@+id/result_fragment_retakeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
		style="@style/TimeTestButton"
   		/>
    
</LinearLayout>
